--- a/barcodescanner/src/main/res/layout/activity_barcode_scanner.xml
+++ b/barcodescanner/src/main/res/layout/activity_barcode_scanner.xml
@@ -13,18 +13,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <TextView
+    <View
         android:id="@+id/barcode_text"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        app:layout_constraintTop_toBottomOf="@id/surface_view"
-        android:layout_marginTop="50dp"
-        android:text="Barcode Text"
-        android:textSize="25sp"
-        android:padding="5dp"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/camera_area_focus"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
